# bf1942-adjust-monitor-settings

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  ShortcutProvider.cc  ShortcutProvider.h  adjust_monitor_settings.cc  common.cc  common.h  configure.ac  create_desktop_icons.cc  list_monitor_resolutions.cc  reconfigure.sh
cpputils/cpputilsshared/: CppSqlReader.cc  CppSqlReader.h  FetchTableInherit.h  FetchTableTuple.h
